--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'com.itextpdf:itextg:5.5.10'
 
     implementation "org.jetbrains.anko:anko-commons:0.10.4"
+    implementation 'com.karumi:dexter:5.0.0'
 }
